--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,9 +213,42 @@
      text-shadow: 0 0 5px #00ff00;
  }
 
- footer {
-     background-color: #000;
- }
+.footer {
+    background-image: url(../img/misión.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    position: relative;
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 200px; /* Mejor min-height para adaptarse a contenido */
+    z-index: 1;
+}
+
+/* Overlay oscuro sobre la imagen */
+.footer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6); /* Oscuridad ajustable */
+    z-index: 0;
+}
+
+/* Asegurar que el contenido esté sobre la sombra */
+.footer * {
+    position: relative;
+    z-index: 1;
+}
 
  .social-icons {
   display: flex;
